--- a/index.css
+++ b/index.css
@@ -1,4 +1,4 @@
-/* Font Generation */
+/* Font and Body Setup */
 @font-face {
     font-family: 'poiret_one';
     src: url('font_and_assets/webfontkit-20200703-165336/poiretone-regular-webfont.woff2') format('woff2'),
@@ -7,14 +7,17 @@
     font-style: normal;
 
 }
-
-/* Body Setup */
 body {
     font-family: 'poiret_one';
     background-color: #E1EFEC;
     padding: 0px;
     margin: 0px;
 }
+/**********/
+
+
+
+
 
 /* Nav Bar Setup */
 #bar {
@@ -37,7 +40,11 @@ ul {
     padding: 15px 0px 15px 0px;
     height: 50px;
 }
-/*  */
+/**********/
+
+
+
+
 
 /* List Item Setup */
 li {
@@ -63,19 +70,6 @@ li img {
 li div {
     display: inline;
 }
-#name {
-    margin: 15px 10px 15px 0px;
-}
-
-#slash {
-    margin: 15px 5px 15px 0px;
-    color: gray;
-}
-
-#specialization {
-    margin: 15px 0px 15px 5px;
-    color: gray;
-}
 
 /* a */
 li a {
@@ -84,30 +78,36 @@ li a {
     text-decoration: none;
     color: black;
 }
+#current {
+    color: #FA9429;
+}
 
+/* Link Transition and Hover Setup */
 a {
     transition: color 1s;
 }
 a:hover {
     color: #FA9429;
 }
+/**********/
 
-#current {
-    color: #FA9429;
-}
-/*  */
 
+
+
+
+/* Landing Setup */
 #main-landing {
     height: 400px;
     margin: 40px 0 0 0;
 }
 
-#picture {
+/* Headshot */
+#landing-headshot-li {
     margin: 0;
     width: 38%;
     height: 400px;
 }
-#about-pic {
+#headshot {
     margin-left: 15%;
     height: 400px;
     border-style: solid;
@@ -116,18 +116,17 @@ a:hover {
     border-radius: 400px;
 }
 
-#about {
+/* About */
+#landing-about-li {
     margin-left: 10%;
     padding: 80px 2% 0 2%;
     width: 46%;
 }
-
-#name-div {
+#name {
     font-size: 40px;
     font-weight: bold;
 }
-
-#download-a {
+#download {
     margin: 0;
     padding: 0;
 }
@@ -138,7 +137,13 @@ a:hover {
     margin: 0;
     border-radius: 5px;
 }
+/**********/
 
+
+
+
+
+/* Contact Box Setup (In-Progress) */
 #contact-and-gradient {
     margin: 0 0 0 0;
     padding: 0;
@@ -146,7 +151,6 @@ a:hover {
     width: 100%;
     background-image: linear-gradient(to bottom, #E1EFEC, #338B7C);
 }
-
 #contact-div {
     margin: 100px auto;
     padding: 0;
@@ -158,4 +162,4 @@ a:hover {
     text-align: center;
     color: white;
 }
-
+/**********/
