--- a/index.css
+++ b/index.css
@@ -25,7 +25,7 @@ body {
     border-bottom-width: 2px;
     border-bottom-color: #FA9429;
     height: 50px;
-    margin: 0 10px 0 10px;
+    margin: 0 50px 0 50px;
     /*box-shadow: 0px 2px 0px #FA9429, 0px 4px 0px #FBCA92;*/
 }
 
@@ -149,9 +149,10 @@ a:hover {
     padding: 0;
     height: 300px;
     width: 100%;
+    transition: background-image 1s;
     background-image: linear-gradient(to bottom, #E1EFEC, #338B7C);
 }
-#contact-div {
+/* #contact-div {
     margin: 100px auto;
     padding: 0;
     height: 200px;
@@ -161,5 +162,5 @@ a:hover {
     border-radius: 10px;
     text-align: center;
     color: white;
-}
+} */
 /**********/
