Basic Aspects of the Site Finished

--- a/index.css
+++ b/index.css
@@ -144,7 +144,7 @@ a:hover {
 
 
 /* Contact Box Setup (In-Progress) */
-#contact-and-gradient {
+#gradient {
     margin: 0 0 0 0;
     padding: 0;
     height: 300px;
